--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -19,7 +19,7 @@
         </aside>
         <section class="main-app">
             <div class="top-buttons">
-                <button class="btn btn-warning" id="test-api">Probar Conexión</button>
+                <button class="btn btn-warning" id="test-api2">Probar Conexión</button>
             </div>
 
             <div class="dashboard">
@@ -29,6 +29,9 @@
                     </div>
                     <div class="card" id="tiempo">
                         <h3>Tiempo Actual</h3>
+                    </div>
+                    <div class="card" id="visitas">
+                        <h3>Visitas Totales</h3>
                     </div>
                 </div>
             </div>
